# presence-light

cli/: Cargo.toml  justfile
cli/src/: main.rs
server/: .gitignore  Cargo.toml  Vagrantfile  diesel.toml
server/.vagrant/machines/default/virtualbox/: action_provision  action_set_name  box_meta  id  index_uuid  private_key  synced_folders  vagrant_cwd
server/migrations/2022-04-28-170429_states-log/: down.sql  up.sql
server/src/: db.rs  db_schema.rs  handlers.rs  main.rs  onesignal.rs  server.rs  state.rs  ws.rs
server/src/website/: index.html
