[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.12" }
lazy_static = "1.4.0"
config = "0.13.1"
reqwest = {version = "0.11.10", features = ["blocking"]}
dirs = "4.0.0"
